--- a/src/scss/Footer.css
+++ b/src/scss/Footer.css
@@ -1,5 +1,6 @@
 .container-footer {
   width: 100vw;
+  height: 20vh;
   background-color: #fff;
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
@@ -40,10 +41,12 @@
 }
 .container-footer .news h4 {
   margin-bottom: 10px;
+  font-size: 1rem;
 }
 .container-footer .news input {
-  width: 95%;
+  width: 100%;
   border-radius: 10px;
+  font-size: 0.8rem;
 }
 .container-footer .news button {
   margin: 0;
