--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -3,6 +3,7 @@ $text-color: #000;
 
 .container-footer {
   width: 100vw;
+  height: 20vh;
   background-color: $background-color;
   color: $text-color;
   font-family: Arial, Helvetica, sans-serif;
@@ -49,11 +50,13 @@ $text-color: #000;
 
     h4 {
       margin-bottom: 10px;
+      font-size: 1rem;
     }
 
     input {
-      width: 95%;
+      width: 100%;
       border-radius: 10px;
+      font-size: 0.8rem;
     }
 
     button {
