--- a/src/scss/Projeto.css
+++ b/src/scss/Projeto.css
@@ -3,17 +3,14 @@
   height: 105vh;
   padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-#container-projeto.extended-height {
   height: 150vh;
 }
 
-h1,
-h2 {
+h1, h2 {
   text-transform: uppercase;
   margin: 0 0 20px 60px;
   border-bottom: 2px solid #ffbc00;
+  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -52,6 +49,7 @@ input {
 #resultados {
   padding: 120px 10px;
 }
+
 .bolinha {
   width: 12px;
   height: 12px;
@@ -59,18 +57,12 @@ input {
   display: inline-block;
   margin-right: 8px;
 }
-
-.verde {
+.bolinha.verde {
   background-color: green;
 }
-
-.amarela {
+.bolinha.amarela {
   background-color: yellow;
 }
-
-.vermelha {
+.bolinha.vermelha {
   background-color: red;
-}
-
-
-
+}/*# sourceMappingURL=Projeto.css.map */
