--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,3 +6,12 @@ body {
     overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: rgba(128, 128, 128, 0.288);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: red;
+    border-radius: 10px;
+  }
